kubernetes/infra/flux-system/weave-gitops/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  hosts:
    - gitops.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: weave-gitops.flux-system.svc.cluster.local
            port:
              number: 9001
